Manually add changes from fix_shift_datepicker

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -101,9 +101,9 @@ ul.errorlist {
   text-align: center;
 }
 
-.q-date__header {
-  display: none;
-}
+// .q-date__header {
+//   display: none;
+// }
 
 .c-dialog {
   background-color: white;
